# fastapi_simple_api

./: alembic.ini  comands.txt  pytest.ini
migrations/: env.py
migrations/versions/: 2024_08_06_1905-487412828413_rework_token.py  2024_08_06_2051-936bfa2747ab_rework_token.py
src/: main.py  pyproject.toml
src/auth/: api_key.py  auth.py  database.py  db_helper.py  db_model.py  manager.py  schemas.py
src/items/: docs.py  models.py  router.py  schemas.py
src/models/: models.py  schemas.py  test_base.py  test_data.py  users_model.py
src/tasks/: tasks.py
src/tests/: Locators.py  conftest.py  test_auth.py  test_base.py  test_data.py  test_item.py  tests.py
src/user/: users_model.py
tests/: Locators.py  conftest.py  test_auth.py
