[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Saberan <v.kotelnikovdidi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
psycopg = "^3.2.1"
alembic = "^1.13.2"
psycopg2 = "^2.9.9"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
redis = "^5.0.8"
celery = "^5.4.0"
flower = "^2.0.1"
pydantic = "^2.8.2"
bson = "^0.5.10"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

